--- a/hm_e-commerce/asset/admincp/custom.css
+++ b/hm_e-commerce/asset/admincp/custom.css
@@ -31,11 +31,11 @@
     margin-right: 1%;
 }
 .product_option_group_widget:nth-child(2n+2) {
-	float: right;
+    float: right;
     margin-right: 0px;
 }
 .table-container{
-	margin-top:20px;
+    margin-top:20px;
 }
 .alert-remove-order{
     margin-bottom: 20px;
@@ -57,7 +57,7 @@ li.isset_option {
 input.quick_save_option_name {
     width: auto;
     min-width: 70%;
-	float: left;
+    float: left;
     border: none;
     padding-left: 10px;
     height: 32px;
@@ -75,8 +75,13 @@ img.option_image {
     line-height: 32px;
 }
 .product_option_item {
-	float: left;
+    float: left;
     width: 100%;
     margin-bottom: 10px;
     line-height: 32px;
+}
+.product_version_line {
+    margin-bottom: 10px;
+    width: 100%;
+    float: left;
 }
